--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </style>
 </head>
 <body>
+    <input id="romaninput">
+    <div id="output"></div>
     <script src="package.js"></script>
 </body>
 </html>
